Footer positioning fix for main page on mobile

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,6 +23,7 @@ $breakpoints: (
 
 body, html {
   width: 100%;
+  height: 100%;
   margin: 0;
   background-color: #F7F7F7;
 }
@@ -73,6 +74,7 @@ html {
 .container {
 
   width: 80%;
+  height: calc(80% + 44px);
   margin: 0 auto;
   user-select: none;
 
